post release cleanup

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1950,7 +1950,7 @@
 	<item component="ComponentInfo{com.asus.themeapp/com.asus.themeapp.ThemeAppActivity}" drawable="asus_themes" />
 	<item component="ComponentInfo{com.asus.weathertime/com.asus.weathertime.WeatherTimeSettings}" drawable="asus_weather" />
 	<item component="ComponentInfo{com.asustor.aidata.plus/com.asustor.aidata.plus.LauncherActivity}" drawable="aidata" />
-<item component="ComponentInfo{com.asustor.aidownload/com.asustor.aidownload.LauncherActivity}" drawable="aidownload" />
+	<item component="ComponentInfo{com.asustor.aidownload/com.asustor.aidownload.LauncherActivity}" drawable="aidownload" />
 	<item component="ComponentInfo{com.asustor.aifoto.plus/com.asustor.aifoto.plus.login.LauncherActivity}" drawable="aifoto_3" />
 	<item component="ComponentInfo{com.asustor.aimusics/com.asustor.aimusics.MainActivity}" drawable="aimusic" />
 	<item component="ComponentInfo{com.asustor.airemote/com.asustor.airemote.LauncherActivity}" drawable="airemote" />
@@ -3864,7 +3864,7 @@
 	<item component="ComponentInfo{com.fantrax.www.twa/com.fantrax.www.twa.LauncherActivity}" drawable="fantrax_fantasy_sports" />
 	<item component="ComponentInfo{com.fanzetech.holyquran/com.fanzetech.holyquran.QuranSplashView}" drawable="al_quran_indonesia" />
 	<item component="ComponentInfo{com.farlightgames.igame.gp/com.farlightgames.igame.SplashActivity}" drawable="afk_journey" />
-<item component="ComponentInfo{com.farmerbb.appnotifier/com.farmerbb.appnotifier.ui.MainActivity}" drawable="appnotifier" />
+	<item component="ComponentInfo{com.farmerbb.appnotifier/com.farmerbb.appnotifier.ui.MainActivity}" drawable="appnotifier" />
 	<item component="ComponentInfo{com.farmerbb.notepad/com.farmerbb.notepad.MainActivity}" drawable="quickmemo" />
 	<item component="ComponentInfo{com.farmerbb.taskbar/com.farmerbb.taskbar.MainActivity}" drawable="taskbar" />
 	<item component="ComponentInfo{com.farutexmobile/com.farutexmobile.MainActivity}" drawable="ebidfood" />
@@ -5624,7 +5624,7 @@
 	<item component="ComponentInfo{com.kaede_software.superresolutionwaifu2x/com.kaede_software.superresolutionwaifu2x.SdFileListActivity}" drawable="waifu2x" />
 	<item component="ComponentInfo{com.kaeruct.raumballer/jgame.platform.JGActivity}" drawable="raumballer" />
 	<item component="ComponentInfo{com.kai.kaiticketing/com.kai.kaiticketing.MainActivity}" drawable="access_by_kai" />
-<item component="ComponentInfo{com.kaiwolfram.nozzle/com.kaiwolfram.nozzle.MainActivity}" drawable="nozzle" />
+	<item component="ComponentInfo{com.kaiwolfram.nozzle/com.kaiwolfram.nozzle.MainActivity}" drawable="nozzle" />
 	<item component="ComponentInfo{com.kaizen9.fet.android/com.kaizen9.fet.android.AndroidLauncher}" drawable="functional_ear_trainer" />
 	<item component="ComponentInfo{com.kajda.fuelio/com.kajda.fuelio.DashboardActivity}" drawable="fuelio" />
 	<item component="ComponentInfo{com.kakao.page/com.kakao.page.activity.SplashActivity}" drawable="kakaopage" />
@@ -6032,8 +6032,8 @@
 	<item component="ComponentInfo{com.linguee.linguee/com.linguee.linguee.MainActivity}" drawable="linguee_dictionary" />
 	<item component="ComponentInfo{com.linkedin.android.jobs.jobseeker/com.linkedin.android.jobs.jobseeker.activity.AppLauncherActivity}" drawable="linked__in" />
 	<item component="ComponentInfo{com.linkedin.android.learning/com.linkedin.android.learning.launchscreen.LaunchScreenActivity}" drawable="linkedin_learning" />
-	<item component="ComponentInfo{com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault}" drawable="linked_in" />
-<item component="ComponentInfo{com.linkedin.android/com.linkedin.android.authenticator.LaunchActivity}" drawable="linked__in" />
+	<item component="ComponentInfo{com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault}" drawable="linked__in" />
+	<item component="ComponentInfo{com.linkedin.android/com.linkedin.android.authenticator.LaunchActivity}" drawable="linked__in" />
 	<item component="ComponentInfo{com.linkit.bimatri/com.linkit.bimatri.presentation.activity.SplashScreenActivity}" drawable="bima_plus" />
 	<item component="ComponentInfo{com.linkit.bimatri/crc649d124a6b6fb56618.MainActivity}" drawable="bima_plus" />
 	<item component="ComponentInfo{com.linkit.bimatri/crc646706112c2f8853b0.SplashActivity}" drawable="bima_plus" />
@@ -7690,7 +7690,7 @@
 	<item component="ComponentInfo{com.popularapp.thirtydayfitnesschallenge/com.popularapp.thirtydayfitnesschallenge.activity.StartActivity}" drawable="_30_day_fitness_challenge" />
 	<item component="ComponentInfo{com.popularapp.thirtydayfitnesschallenge/com.popularapp.thirtydayfitnesschallenge.revise.guide.splash.SplashActivity}" drawable="_30_day_fitness_challenge" />
 	<item component="ComponentInfo{com.popularapp.thirtydayfitnesschallengepro/com.popularapp.thirtydayfitnesschallengepro.activity.StartActivity}" drawable="_30_day_fitness_challenge" />
-<item component="ComponentInfo{com.popularapp.videodownloaderforinstagram/com.popularapp.videodownloaderforinstagram.MainTabActivity}" drawable="video_downloader_ig" />
+	<item component="ComponentInfo{com.popularapp.videodownloaderforinstagram/com.popularapp.videodownloaderforinstagram.MainTabActivity}" drawable="video_downloader_ig" />
 	<item component="ComponentInfo{com.porg.batt/com.porg.batt.MainActivity}" drawable="batt" />
 	<item component="ComponentInfo{com.porg.blocker/com.porg.blocker.MainActivity}" drawable="disconnect" />
 	<item component="ComponentInfo{com.portableandroid.classicboy/com.portableandroid.classicboy.EntryActivity}" drawable="classicboy" />
@@ -11765,7 +11765,7 @@
 	<item component="ComponentInfo{dev.sebaubuntu.athena.dev/dev.sebaubuntu.athena.MainActivity}" drawable="athena" />
 	<item component="ComponentInfo{dev.shorthouse.coinwatch/dev.shorthouse.coinwatch.MainActivity}" drawable="coinwatch" />
 	<item component="ComponentInfo{dev.soupslurpr.appverifier/dev.soupslurpr.appverifier.MainActivity}" drawable="app_verifier" />
-<item component="ComponentInfo{dev.soupslurpr.beautyxt/dev.soupslurpr.beautyxt.MainActivity}" drawable="beautyxt" />
+	<item component="ComponentInfo{dev.soupslurpr.beautyxt/dev.soupslurpr.beautyxt.MainActivity}" drawable="beautyxt" />
 	<item component="ComponentInfo{dev.soupslurpr.transcribro/dev.soupslurpr.transcribro.MainActivity}" drawable="transcribro" />
 	<item component="ComponentInfo{dev.southpaw.iconpusher/dev.southpaw.iconpusher.AppListerActivity}" drawable="icon_pusher" />
 	<item component="ComponentInfo{dev.suyu.suyu_emu/dev.suyu.suyu_emu.ui.main.MainActivity}" drawable="suyu" />
@@ -12503,7 +12503,7 @@
 	<item component="ComponentInfo{io.skipday.takan/io.skipday.takan.ui.MainActivity}" drawable="takan" />
 	<item component="ComponentInfo{io.snappmobile.zeplinmobile/io.snappmobile.zeplinmobile.StartupActivity}" drawable="zeplin" />
 	<item component="ComponentInfo{io.snaq.app/io.snaq.app.MainActivity}" drawable="snaq" />
-<item component="ComponentInfo{io.spck/io.spck.editor.EditorActivity}" drawable="spck_code_editor" />
+	<item component="ComponentInfo{io.spck/io.spck.editor.EditorActivity}" drawable="spck_code_editor" />
 	<item component="ComponentInfo{io.stashteam.games.tracker.stashapp/io.stashteam.stashapp.ui.splash.SplashActivity}" drawable="stash_games_tracker" />
 	<item component="ComponentInfo{io.stellio.music/air.stellio.player.MainActivity}" drawable="stellio" />
 	<item component="ComponentInfo{io.strongapp.strong/io.strongapp.strong.MainActivity}" drawable="workout" />
@@ -12850,7 +12850,7 @@
 	<item component="ComponentInfo{losebellyfat.flatstomach.absworkout.fatburning/losebellyfat.flatstomach.absworkout.fatburning.activity.StartActivity}" drawable="abs_workout_belly_fat" />
 	<item component="ComponentInfo{loseweightapp.loseweightappforwomen.womenworkoutathome/loseweightapp.loseweightappforwomen.womenworkoutathome.activity.SplashActivity}" drawable="workout" />
 	<item component="ComponentInfo{ls.bloomee.musicplayer/com.ryanheise.audioservice.AudioServiceActivity}" drawable="blomeetunes" />
-<item component="ComponentInfo{lt.lemonlabs.android.paysera/com.paysera.LaunchScreenActivity}" drawable="paysera" />
+	<item component="ComponentInfo{lt.lemonlabs.android.paysera/com.paysera.LaunchScreenActivity}" drawable="paysera" />
 	<item component="ComponentInfo{lt.maxima.aciu/lt.maxima.aciu.LauncherActivity}" drawable="maxima" />
 	<item component="ComponentInfo{lt.sb.mobileapp/com.siauliu.bankas.mobile.StartActivity}" drawable="bank" />
 	<item component="ComponentInfo{lt.swedbank.mobile/com.swedbank.mobile.app.MainActivity}" drawable="swedbank" />
@@ -13431,7 +13431,7 @@
 	<item component="ComponentInfo{ogz.tripeaks/ogz.tripeaks.android.AndroidLauncher}" drawable="tripeaks" />
 	<item component="ComponentInfo{okinawa.harapeco.purrfectCats/com.unity3d.player.UnityPlayerActivity}" drawable="purrfect_cats" />
 	<item component="ComponentInfo{om.alaraby/com.alaraby.MainActivity}" drawable="alaraby" />
-<item component="ComponentInfo{om.roozbehzarei.filester/com.roozbehzarei.filester.ui.MainActivity}" drawable="filester" />
+	<item component="ComponentInfo{om.roozbehzarei.filester/com.roozbehzarei.filester.ui.MainActivity}" drawable="filester" />
 	<item component="ComponentInfo{one4studio.iconpack.lenaadaptive/com.candybar.dev.activities.SplashActivity}" drawable="lena_adaptive" />
 	<item component="ComponentInfo{one.librem.chat/im.vector.activity.VectorLauncherActivity}" drawable="librem_chat" />
 	<item component="ComponentInfo{one.librem.mail/com.fsck.k9.activity.Accounts}" drawable="librem_mail" />
@@ -13443,7 +13443,7 @@
 	<item component="ComponentInfo{one.tomorrow.app/one.tomorrow.app.commons.ui.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{one.tomorrow.app/one.tomorrow.app.ui.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{one.track.app/com.onetrackapp.MainActivity}" drawable="_1track" />
-<item component="ComponentInfo{one.zagura.CodeRainWall/one.zagura.CodeRainWall.SettingsActivity}" drawable="code_rain" />
+	<item component="ComponentInfo{one.zagura.CodeRainWall/one.zagura.CodeRainWall.SettingsActivity}" drawable="code_rain" />
 	<item component="ComponentInfo{one.zagura.IonLauncher/one.zagura.IonLauncher.LauncherAlias}" drawable="ion_launcher" />
 	<item component="ComponentInfo{oneplus.consumer.android/servify.android.consumer.splash.SplashActivity}" drawable="one_plus_care" />
 	<item component="ComponentInfo{online.hisubway.marindeck/io.kodular.shenyusoftware.MarinDeck.Screen1}" drawable="marindeck" />
@@ -14082,7 +14082,7 @@
 	<item component="ComponentInfo{org.worldrugby.lawsofrugby/com.sportdevelopment.worldrugbylawsandroid.Activities.LanguageSelectionActivity}" drawable="rugby_laws" />
 	<item component="ComponentInfo{org.xbet.client1/org.xbet.client1.StarterActivityDefault}" drawable="_1xbet" />
 	<item component="ComponentInfo{org.xbet.client1/org.xbet.client1.features.appactivity.ApplicationActivity}" drawable="_1xbet" />
-<item component="ComponentInfo{org.xbet.client1/org.xbet.client1.new_arch.presentation.ui.starter.StarterActivity}" drawable="_1xbet" />
+	<item component="ComponentInfo{org.xbet.client1/org.xbet.client1.new_arch.presentation.ui.starter.StarterActivity}" drawable="_1xbet" />
 	<item component="ComponentInfo{org.xbmc.kodi/org.xbmc.kodi.Splash}" drawable="kodi" />
 	<item component="ComponentInfo{org.xbmc.kore/org.xbmc.kore.ui.RemoteActivity}" drawable="kore" />
 	<item component="ComponentInfo{org.xbmc.kore/org.xbmc.kore.ui.sections.remote.RemoteActivity}" drawable="kore" />
@@ -15069,7 +15069,7 @@
 	<item component="ComponentInfo{uk.gov.tfl.gotfl/uk.gov.tfl.tflgo.view.ui.splash.SplashActivity}" drawable="tfl_go" />
 	<item component="ComponentInfo{uk.gov.tfl.oystercontactless/com.oyster.MainActivity}" drawable="tfl_oyster" />
 	<item component="ComponentInfo{uk.me.amugofjava.anytime/com.ryanheise.audioservice.AudioServiceActivity}" drawable="anytime_podcast" />
-<item component="ComponentInfo{uk.me.paraskos.pdfrenderer/uk.me.paraskos.pdfrenderer.MainActivity}" drawable="pdf_to_images" />
+	<item component="ComponentInfo{uk.me.paraskos.pdfrenderer/uk.me.paraskos.pdfrenderer.MainActivity}" drawable="pdf_to_images" />
 	<item component="ComponentInfo{uk.openvk.android.legacy/uk.openvk.android.legacy.ui.core.activities.MainActivity}" drawable="vkontakte" />
 	<item component="ComponentInfo{uk.sensoryunderload.infinilist/uk.sensoryunderload.infinilist.ListView}" drawable="infinilist" />
 	<item component="ComponentInfo{uk.takeaway.android/com.takeaway.android.activity.Splash}" drawable="takeaway" />
