--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="grab" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -240,6 +241,7 @@
 	<item drawable="google_voice_alt_1" />
 	<item drawable="google_wallet_alt_1" />
 	<item drawable="gosuslugi_alt_1" />
+	<item drawable="grab_alt_1" />
 	<item drawable="gramophone_alt_1" />
 	<item drawable="gramophone_alt_2" />
 	<item drawable="gsam_battery_monitor_alt_1" />
