--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -530,6 +530,7 @@
 	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.routing.RoutingActivity}" drawable="bbc_iplayer" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.app.TopLevelActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.ui.splash.SplashActivity}" drawable="bbc_news" />
+	<item component="ComponentInfo{bbc.mobile.news.uk/uk.co.bbc.chrysalis.discovery.ui.signin.SplashActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.ww/bbc.mobile.news.v3.app.TopLevelActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.ww/bbc.mobile.news.v3.ui.splash.SplashActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.sport.ww/uk.co.bbc.android.sport.MainActivity}" drawable="bbc_sport" />
