--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,8 @@
 
 	<category title="New" />
 	<item drawable="grab" />
+	<item drawable="mlauncher" />
+	<item drawable="thunderbird" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -364,6 +366,7 @@
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
+	<item drawable="mlauncher_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
@@ -9958,6 +9961,7 @@
 	<item drawable="thunder" />
 	<item drawable="thunder_vpn" />
 	<item drawable="thunderbird" />
+	<item drawable="thunderbird_beta" />
 	<item drawable="tiaa" />
 	<item drawable="tic_eighty" />
 	<item drawable="tick__tick" />
