--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13274,7 +13274,7 @@
 	<item component="ComponentInfo{net.tcodes.altaufikvpn/com.tcodes.altaufikvpn.MainActivity}" drawable="altaufik_vpn" />
 	<item component="ComponentInfo{net.techet.netanalyzer.an/net.techet.netanalyzer.an.activity.MainActivity}" drawable="network_analyzer" />
 	<item component="ComponentInfo{net.techet.netanalyzerlite.an/net.techet.netanalyzerlite.an.activity.MainActivity}" drawable="network_analyzer" />
-	<item component="ComponentInfo{net.thunderbird.android.beta/com.fsck.k9.activity.MessageList}" drawable="thunderbird" />
+	<item component="ComponentInfo{net.thunderbird.android.beta/com.fsck.k9.activity.MessageList}" drawable="thunderbird_beta" />
 	<item component="ComponentInfo{net.tjado.usbgadget/net.tjado.usbgadget.MainActivity}" drawable="usb_gadget_tool" />
 	<item component="ComponentInfo{net.tonysoft.bookmory/net.tonysoft.bookmory.MainActivity}" drawable="bookmory" />
 	<item component="ComponentInfo{net.torguard.openvpn.client/net.torguard.openvpn.client.LauncherActivity}" drawable="torguard" />
