--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -200,6 +200,24 @@
 	<item drawable="fm_radio_alt_1" />
 	<item drawable="formula_1_alt_1" />
 	<item drawable="fosdem_alt_1" />
+	<item drawable="fossify_calculator_amber" />
+	<item drawable="fossify_calculator_blue" />
+	<item drawable="fossify_calculator_bluegrey" />
+	<item drawable="fossify_calculator_brown" />
+	<item drawable="fossify_calculator_cyan" />
+	<item drawable="fossify_calculator_deep_orange" />
+	<item drawable="fossify_calculator_deep_purple" />
+	<item drawable="fossify_calculator_greyblack" />
+	<item drawable="fossify_calculator_indigo" />
+	<item drawable="fossify_calculator_light_blue" />
+	<item drawable="fossify_calculator_light_green" />
+	<item drawable="fossify_calculator_lime" />
+	<item drawable="fossify_calculator_pink" />
+	<item drawable="fossify_calculator_purple" />
+	<item drawable="fossify_calculator_orange" />
+	<item drawable="fossify_calculator_red" />
+	<item drawable="fossify_calculator_teal" />
+	<item drawable="fossify_calculator_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
