--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -218,6 +218,24 @@
 	<item drawable="fossify_calculator_red" />
 	<item drawable="fossify_calculator_teal" />
 	<item drawable="fossify_calculator_yellow" />
+	<item drawable="fossify_calendar_amber" />
+	<item drawable="fossify_calendar_blue" />
+	<item drawable="fossify_calendar_bluegrey" />
+	<item drawable="fossify_calendar_brown" />
+	<item drawable="fossify_calendar_cyan" />
+	<item drawable="fossify_calendar_deep_orange" />
+	<item drawable="fossify_calendar_deep_purple" />
+	<item drawable="fossify_calendar_greyblack" />
+	<item drawable="fossify_calendar_indigo" />
+	<item drawable="fossify_calendar_light_blue" />
+	<item drawable="fossify_calendar_light_green" />
+	<item drawable="fossify_calendar_lime" />
+	<item drawable="fossify_calendar_pink" />
+	<item drawable="fossify_calendar_purple" />
+	<item drawable="fossify_calendar_orange" />
+	<item drawable="fossify_calendar_red" />
+	<item drawable="fossify_calendar_teal" />
+	<item drawable="fossify_calendar_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
