add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15293,4 +15293,22 @@
 	<item component="ComponentInfo{org.fossify.calendar/org.fossify.calendar.activities.SplashActivity.Red}" drawable="fossify_calendar_red" />
 	<item component="ComponentInfo{org.fossify.calendar/org.fossify.calendar.activities.SplashActivity.Teal}" drawable="fossify_calendar_teal" />
 	<item component="ComponentInfo{org.fossify.calendar/org.fossify.calendar.activities.SplashActivity.Yellow}" drawable="fossify_calendar_yellow" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Amber}" drawable="fossify_camera_amber" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Blue}" drawable="fossify_camera_blue" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Blue_Grey}" drawable="fossify_camera_blue_grey" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Brown}" drawable="fossify_camera_brown" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Cyan}" drawable="fossify_camera_cyan" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Deep_Orange}" drawable="fossify_camera_deep_orange" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Deep_Purple}" drawable="fossify_camera_deep_purple" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Grey_Black}" drawable="fossify_camera_grey_black" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Indigo}" drawable="fossify_camera_indigo" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Light_Blue}" drawable="fossify_camera_light_blue" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Light_Green}" drawable="fossify_camera_light_green" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Lime}" drawable="fossify_camera_lime" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Orange}" drawable="fossify_camera_orange" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Pink}" drawable="fossify_camera_pink" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Purple}" drawable="fossify_camera_purple" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Red}" drawable="fossify_camera_red" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Teal}" drawable="fossify_camera_teal" />
+	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Yellow}" drawable="fossify_camera_yellow" />
 </resources>
