--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -236,6 +236,24 @@
 	<item drawable="fossify_calendar_red" />
 	<item drawable="fossify_calendar_teal" />
 	<item drawable="fossify_calendar_yellow" />
+	<item drawable="fossify_camera_amber" />
+	<item drawable="fossify_camera_blue" />
+	<item drawable="fossify_camera_bluegrey" />
+	<item drawable="fossify_camera_brown" />
+	<item drawable="fossify_camera_cyan" />
+	<item drawable="fossify_camera_deep_orange" />
+	<item drawable="fossify_camera_deep_purple" />
+	<item drawable="fossify_camera_greyblack" />
+	<item drawable="fossify_camera_indigo" />
+	<item drawable="fossify_camera_light_blue" />
+	<item drawable="fossify_camera_light_green" />
+	<item drawable="fossify_camera_lime" />
+	<item drawable="fossify_camera_pink" />
+	<item drawable="fossify_camera_purple" />
+	<item drawable="fossify_camera_orange" />
+	<item drawable="fossify_camera_red" />
+	<item drawable="fossify_camera_teal" />
+	<item drawable="fossify_camera_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
