add fossify icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -254,6 +254,24 @@
 	<item drawable="fossify_camera_red" />
 	<item drawable="fossify_camera_teal" />
 	<item drawable="fossify_camera_yellow" />
+	<item drawable="fossify_clock_amber" />
+	<item drawable="fossify_clock_blue" />
+	<item drawable="fossify_clock_bluegrey" />
+	<item drawable="fossify_clock_brown" />
+	<item drawable="fossify_clock_cyan" />
+	<item drawable="fossify_clock_deep_orange" />
+	<item drawable="fossify_clock_deep_purple" />
+	<item drawable="fossify_clock_greyblack" />
+	<item drawable="fossify_clock_indigo" />
+	<item drawable="fossify_clock_light_blue" />
+	<item drawable="fossify_clock_light_green" />
+	<item drawable="fossify_clock_lime" />
+	<item drawable="fossify_clock_pink" />
+	<item drawable="fossify_clock_purple" />
+	<item drawable="fossify_clock_orange" />
+	<item drawable="fossify_clock_red" />
+	<item drawable="fossify_clock_teal" />
+	<item drawable="fossify_clock_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
