--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15311,4 +15311,22 @@
 	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Red}" drawable="fossify_camera_red" />
 	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Teal}" drawable="fossify_camera_teal" />
 	<item component="ComponentInfo{org.fossify.camera/org.fossify.camera.activities.SplashActivity.Yellow}" drawable="fossify_camera_yellow" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Amber}" drawable="fossify_clock_amber" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Blue}" drawable="fossify_clock_blue" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Blue_Grey}" drawable="fossify_clock_blue_grey" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Brown}" drawable="fossify_clock_brown" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Cyan}" drawable="fossify_clock_cyan" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Deep_Orange}" drawable="fossify_clock_deep_orange" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Deep_Purple}" drawable="fossify_clock_deep_purple" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Grey_Black}" drawable="fossify_clock_grey_black" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Indigo}" drawable="fossify_clock_indigo" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Light_Blue}" drawable="fossify_clock_light_blue" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Light_Green}" drawable="fossify_clock_light_green" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Lime}" drawable="fossify_clock_lime" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Orange}" drawable="fossify_clock_orange" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Pink}" drawable="fossify_clock_pink" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Purple}" drawable="fossify_clock_purple" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Red}" drawable="fossify_clock_red" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Teal}" drawable="fossify_clock_teal" />
+	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Yellow}" drawable="fossify_clock_yellow" />
 </resources>
