add fossify icons

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15329,4 +15329,22 @@
 	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Red}" drawable="fossify_clock_red" />
 	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Teal}" drawable="fossify_clock_teal" />
 	<item component="ComponentInfo{org.fossify.clock/org.fossify.clock.activities.SplashActivity.Yellow}" drawable="fossify_clock_yellow" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Amber}" drawable="fossify_contacts_amber" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Blue}" drawable="fossify_contacts_blue" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Blue_Grey}" drawable="fossify_contacts_blue_grey" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Brown}" drawable="fossify_contacts_brown" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Cyan}" drawable="fossify_contacts_cyan" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Deep_Orange}" drawable="fossify_contacts_deep_orange" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Deep_Purple}" drawable="fossify_contacts_deep_purple" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Grey_Black}" drawable="fossify_contacts_grey_black" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Indigo}" drawable="fossify_contacts_indigo" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Light_Blue}" drawable="fossify_contacts_light_blue" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Light_Green}" drawable="fossify_contacts_light_green" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Lime}" drawable="fossify_contacts_lime" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Orange}" drawable="fossify_contacts_orange" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Pink}" drawable="fossify_contacts_pink" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Purple}" drawable="fossify_contacts_purple" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Red}" drawable="fossify_contacts_red" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Teal}" drawable="fossify_contacts_teal" />
+	<item component="ComponentInfo{org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Yellow}" drawable="fossify_contacts_yellow" />
 </resources>
