--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -272,6 +272,24 @@
 	<item drawable="fossify_clock_red" />
 	<item drawable="fossify_clock_teal" />
 	<item drawable="fossify_clock_yellow" />
+	<item drawable="fossify_contacts_amber" />
+	<item drawable="fossify_contacts_blue" />
+	<item drawable="fossify_contacts_bluegrey" />
+	<item drawable="fossify_contacts_brown" />
+	<item drawable="fossify_contacts_cyan" />
+	<item drawable="fossify_contacts_deep_orange" />
+	<item drawable="fossify_contacts_deep_purple" />
+	<item drawable="fossify_contacts_greyblack" />
+	<item drawable="fossify_contacts_indigo" />
+	<item drawable="fossify_contacts_light_blue" />
+	<item drawable="fossify_contacts_light_green" />
+	<item drawable="fossify_contacts_lime" />
+	<item drawable="fossify_contacts_pink" />
+	<item drawable="fossify_contacts_purple" />
+	<item drawable="fossify_contacts_orange" />
+	<item drawable="fossify_contacts_red" />
+	<item drawable="fossify_contacts_teal" />
+	<item drawable="fossify_contacts_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
