--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -290,6 +290,24 @@
 	<item drawable="fossify_contacts_red" />
 	<item drawable="fossify_contacts_teal" />
 	<item drawable="fossify_contacts_yellow" />
+	<item drawable="fossify_file_manager_amber" />
+	<item drawable="fossify_file_manager_blue" />
+	<item drawable="fossify_file_manager_bluegrey" />
+	<item drawable="fossify_file_manager_brown" />
+	<item drawable="fossify_file_manager_cyan" />
+	<item drawable="fossify_file_manager_deep_orange" />
+	<item drawable="fossify_file_manager_deep_purple" />
+	<item drawable="fossify_file_manager_greyblack" />
+	<item drawable="fossify_file_manager_indigo" />
+	<item drawable="fossify_file_manager_light_blue" />
+	<item drawable="fossify_file_manager_light_green" />
+	<item drawable="fossify_file_manager_lime" />
+	<item drawable="fossify_file_manager_pink" />
+	<item drawable="fossify_file_manager_purple" />
+	<item drawable="fossify_file_manager_orange" />
+	<item drawable="fossify_file_manager_red" />
+	<item drawable="fossify_file_manager_teal" />
+	<item drawable="fossify_file_manager_yellow" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
 	<item drawable="frost_for_facebook_alt_1" />
